--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,11 +12,13 @@ services:
       - "3306:3306"
     volumes:
       - mysql-data:/var/lib/mysql
+      - ./schema.sql:/docker-entrypoint-initdb.d/schema.sql
 
   backend:
     build: ./backend
     volumes:
       - ./backend:/app
+      
     ports:
       - "8080:8080"
     depends_on:
