--- a/frontend/vite-frontend/package.json
+++ b/frontend/vite-frontend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@tanstack/react-table": "^8.21.3",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.3",
+    "recharts": "^3.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
