jest unit tests

--- a/frontend/vite-frontend/tsconfig.json
+++ b/frontend/vite-frontend/tsconfig.json
@@ -3,5 +3,18 @@
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ]
+  ],
+  "compilerOptions": {
+    "jsx": "react-jsx",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "node",
+    "module": "esnext",
+    "target": "es6",
+    "strict": true,
+    "types": ["vitest/globals","jest", "node"]
+  },
+  "include": [
+    "global.d.ts"
+  ],
 }
